# http_server

./: .gitignore  README.md  run_ab_benchmark.sh
benchmarks/: README.d  epoll_output.txt  multithread_output.txt  multithread_static_ab.txt
client/: Makefile  client.cpp  client_helper.cpp  client_helper.h  client_threadpool.cpp  client_threadpool.h  spin.c
http_server_epoll/: CMakeLists.txt  driver.cpp  request.cpp  socket_utils.cpp
http_server_epoll/include/: request.h  socket_utils.h
http_server_multithreading/: CMakeLists.txt  SocketUtils.cpp  ThreadSafeCout.cpp  WorkerPool.cpp  driver.cpp  request.cpp
http_server_multithreading/include/: SocketUtils.h  ThreadSafeCout.h  WorkerPool.h  request.h
